# OGL_intro

./: CMakeLists.txt
inc/glad/: glad.h
src/: camera.h  ebo.h  fbo.h  main.cpp  mesh.h  model.h  rbo.h  shader.h  texture.h  vao.h  vbo.h
src/shaders/: cubemap.frag  cubemap.vert  depth.frag  fragment.frag  outline.vert  reflection.frag  refraction.frag  screen.frag  screen.vert  simple.frag  vertex.vert
